--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,44 @@
-attrs==19.3.0
-certifi==2019.11.28
+atomicwrites==1.3.0
+attrs==19.1.0
+backports.entry-points-selectable==1.1.0
+certifi==2019.3.9
 chardet==3.0.4
+charset-normalizer==2.0.7
 Click==7.0
-Flask==1.1.1
+colorama==0.4.1
+distlib==0.3.3
+env==0.1.0
+filelock==3.2.1
+Flask==1.0.2
 Flask-Testing==0.7.1
 gunicorn==20.0.4
 heroku==0.1.4
-idna==2.9
+idna==2.8
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.10.1
 MarkupSafe==1.1.1
-more-itertools==8.2.0
+more-itertools==7.0.0
 packaging==20.1
-pluggy==0.13.1
-py==1.8.1
+pipenv==2021.5.29
+platformdirs==2.4.0
+pluggy==0.11.0
+psycopg2==2.9.1
+py==1.8.0
 pyparsing==2.4.6
-pytest==5.3.5
-python-dateutil==1.5
-requests==2.23.0
+pytest==4.5.0
+python-dateutil==2.8.0
+pytz==2019.1
+requests==2.22.0
 selenium==3.141.0
-six==1.14.0
-urllib3==1.25.8
-wcwidth==0.1.8
-Werkzeug==1.0.0
+six==1.12.0
+soupsieve==1.9.1
+Unidecode==1.0.23
+urllib3==1.25.2
+virtualenv==20.8.1
+virtualenv-clone==0.5.7
+virtualenvwrapper-win==1.2.6
+wcwidth==0.1.7
+Werkzeug==0.15.4
+WTForms==2.2.1
 zipp==3.0.0
